# pythonkc

./: .gitignore  Cargo.toml  README.rst  config.py  setup.py
python/: main.py  mypy.ini  setup.py
python/app/: main.py  primes.py  rust.py  tests.py  timeit.py
python/pythonkc/: __init__.py  main.py  primes.py  rust.py  tests.py
python/requirements/: development.txt  production.txt
pythonkc/: __init__.py  config.py  primes.py  rust.py  timeit.py  utils.py
pythonkc/scripts/: main.py
pythonkc/tests/: test_primes.py  test_rust.py
requirements/: development.txt  production.txt
rust/: Cargo.toml  build.rs
rust/src/: core.rs  ffi.rs  ffi1.rs  ffi2.rs  lib.rs  primes.rs
rust/src/general/: mod.rs  primitive_types.rs
rust/src/objects/: circle.rs  color.rs
rust/tests/: tests.rs
scripts/: main.py
src/: ffi.rs  lib.rs  primes.rs
src/ffi/: ffi.rs
src/objects/: circle.rs  mod.rs  square.rs  traits.rs
tests/: test_bin.py  test_main.py  test_primes.py  test_rust.py  test_rusty_primes.py  test_utils.py  tests.rs
