[package]
name = "pythonkc"
version = "0.1.0"
authors = ["Brian Myers <brian.carl.myers@gmail.com>"]

[dependencies]
libc = "0.2.19"
rayon = "0.6.0"
time = "0.1.36"

[lib]
name = "pythonkc"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pythonkc"
path = "src/bin/main.rs"
doc = false
