[package]
name = "pythonkc"
version = "0.1.0"
authors = ["Brian Myers <brian.carl.myers@gmail.com>"]
build = "build.rs"

[dependencies]
libc = "0.2.19"
num_cpus = "1.2.1"
rayon = "0.6.0"
time = "0.1.36"

[build-dependencies]
rusty-cheddar = "0.3.3"

[lib]
name = "pythonkc"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "primes"
path = "src/bin/primes.rs"
doc = false

[[bin]]
name = "hello"
path = "src/bin/hello.rs"
doc = false
