[package]
name = "rusty_primes"
version = "0.1.0"
authors = ["Brian Myers <brian.carl.myers@gmail.com>"]
build = false
# build = "build.rs"

[dependencies]
libc = "*"
num_cpus = "*"
rayon = "*"
cpython = "*"
time = "*"

[build-dependencies]
rusty-cheddar = "*"

[lib]
name = "rusty_primes"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

# [[bin]]
# name = "primes"
# path = "src/bin/primes.rs"
# doc = false
